# networkmanager-softethervpn

./: .gitignore  Makefile.am  PKGBUILD  README.md  autogen.sh  configure.ac  nm-softethervpn-service.conf  nm-softethervpn-service.name.in
appdata/: network-manager-softethervpn.metainfo.xml.in
auth-dialog/: main.c
examples/dbus/: dbus.py
po/: POTFILES.in
properties/: gresource.xml  libnm-vpn-plugin-softethervpn-editor.ver  nm-softethervpn-dialog.ui  nm-softethervpn-editor-plugin.c  nm-softethervpn-editor-plugin.h  nm-softethervpn-editor.c  nm-softethervpn-editor.h
shared/: import-export.c  import-export.h  nm-service-defines.h
src/: nm-softethervpn-service.c
